--- a/src/index.css
+++ b/src/index.css
@@ -3,60 +3,52 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
-  font-family: "Roboto Black";
+  font-family: "yekan";
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Roboto-Balck.ttf") format("ttf");
+  src: url("/fonts/IranYekan/Yekan.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/Roboto/roboto-light.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Roboto Regular";
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/Roboto/roboto-regular.woff") format("woff");
 }
 @font-face {
   font-family: "Roboto Bold";
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Roboto-Bold.ttf") format("ttf");
+  src: url("/fonts/Roboto/roboto-bold.woff2") format("woff2");
 }
+
 @font-face {
-  font-family: "Roboto ExtraLight";
+  font-family: "Inter Regular";
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Roboto-ExtraLight.ttf") format("ttf");
-}
-@font-face {
-  font-family: "Roboto Light";
-  font-style: normal;
-  font-display: swap;
-  src: url("/fonts/Roboto-Light.ttf") format("ttf");
-}
-@font-face {
-  font-family: "Roboto Medium";
-  font-style: normal;
-  font-display: swap;
-  src: url("/fonts/Roboto-Medium.ttf") format("ttf");
-}
-@font-face {
-  font-family: "Roboto Regular";
-  font-style: normal;
-  font-display: swap;
-  src: url("/fonts/Roboto-Regular.ttf") format("ttf");
-}
-@font-face {
-  font-family: "Roboto SemiBold";
-  font-style: normal;
-  font-display: swap;
-  src: url("/fonts/Roboto-SemiBold.ttf") format("ttf");
-}
-@font-face {
-  font-family: "Roboto Thin";
-  font-style: normal;
-  font-display: swap;
-  src: url("/fonts/Roboto-Thin.ttf") format("ttf");
+  src: url("/fonts/Inter/Inter-Regular.woff2") format("woff2");
 }
 
 @layer base {
+
+  :root {
+    direction: rtl;
+    writing-mode: horizontal-tb;
+    text-orientation: mixed;
+  }
+
   *,
   *::after,
   *::before {
     outline: none;
-    box-sizing: inherit;
+    box-sizing: border-box;
   }
 
   a {
@@ -68,6 +60,7 @@
     user-select: none;
   }
 }
+
 
 @utility flex-center {
   @apply flex items-center justify-center;
@@ -84,6 +77,7 @@
 
 @theme {
   --color-darkText: #003464;
+  --color-active-blue: #2196F3;
   --color-darkPrimary: #151d32;
   --color-lightText: #f3f4f7;
   --color-lightPrimary: #f3fafe;
@@ -98,14 +92,11 @@
   --shadow-costum: 0px 2px 7px 0px #00000026;
   --shadow-dark: 0px 4px 10px 0px #a6a5a526;
   --radius-4xl: 2rem;
-  --font-Roboto-black: "Roboto Black", "sans-serif";
-  --font-Roboto-Bold: "Roboto Bold", "sans-serif";
-  --font-Roboto-ExtraLight: "Roboto ExtraLight", "sans-serif";
-  --font-Roboto-Light: "Roboto Light", "sans-serif";
-  --font-Roboto-Medium: "Roboto Medium", "sans-serif";
-  --font-Roboto-Regular: "Roboto Regular", "sans-serif";
-  --font-Roboto-SemiBold: "Roboto SemiBold", "sans-serif";
-  --font-Roboto-Thin: "Roboto Thin", "sans-serif";
+  --font-yekan: "yekan", "sans-serif";
+  --font-Roboto-light: "Roboto Light", "sans-serif";
+  --font-Roboto-regular: "Roboto Regular", "sans-serif";
+  --font-Roboto-bold: "Roboto Bold", "sans-serif";
+  --font-Inter-regular: "Inter Regular", "sans-serif";
   --breakpoint-xs: 480px;
 }
 /* 
