--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
 @layer base {
 
   :root {
-    direction: rtl;
+    direction: ltr;
     writing-mode: horizontal-tb;
     text-orientation: mixed;
   }
@@ -61,6 +61,9 @@
   }
 }
 
+@utility filter-shadow-cloud {
+  filter: drop-shadow(-15px 55px 27px rgba(18, 6, 67, 0.4));
+}
 
 @utility flex-center {
   @apply flex items-center justify-center;
@@ -90,10 +93,11 @@
     rgba(54, 54, 54, 0) 100%
   );
   --shadow-header: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
-  --shadow-custom: 0px 2px 7px 0px #00000026;
   --shadow-Login: 0px 4px 8px 0px #00000040;
   --shadow-weatherDetails: 0px 4px 10px 0px #00000026;
+  --shadow-LoginSvg: -12.8px 51.21px 64.01px 0px rgba(18, 6, 67, 0.4);
   --shadow-dark: 0px 4px 10px 0px #a6a5a526;
+  --shadow-custom: 0px 2px 7px 0px #00000026;
   --radius-4xl: 2rem;
   --font-yekan: "yekan", "sans-serif";
   --font-Roboto-light: "Roboto Light", "sans-serif";
