--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@
 }
 
 @utility container {
-  @apply mx-auto px-4 lg:px-2.5;
+  @apply mx-auto px-4 2xl:px-16 xl:max-w-[1400px] 2xl:max-w-[1700px];
 }
 
 @theme {
