--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,15 @@
   i {
     user-select: none;
   }
+  .swiper {
+    width: 100%;
+    padding-bottom: 30px !important;
+  }
+
+  .swiper-slide {
+    width: auto !important;
+    height: auto !important;
+  }
 }
 
 @utility filter-shadow-cloud {
@@ -74,7 +83,7 @@
 }
 
 @utility container {
-  @apply mx-auto px-4 2xl:px-16 xl:max-w-[1400px] 2xl:max-w-[1700px];
+  @apply mx-auto px-4 2xl:px-16 xl:max-w-[1425px] 2xl:max-w-[1700px];
 }
 
 @theme {
@@ -95,7 +104,7 @@
   --shadow-Login: 0px 4px 8px 0px #00000040;
   --shadow-weatherDetails: 0px 4px 10px 0px #00000026;
   --shadow-LoginSvg: -12.8px 51.21px 64.01px 0px rgba(18, 6, 67, 0.4);
-  --shadow-dark: 0px 4px 10px 0px #A6A5A526;
+  --shadow-dark: 0px 4px 10px 0px #a6a5a526;
   --shadow-custom: 0px 2px 7px 0px #00000026;
   --radius-4xl: 2rem;
   --font-yekan: "yekan", "sans-serif";
